style.css
/* ... */
img.print-icon {
  border-style: none;
  margin-right: .5em;
}

div.forum-post-links {
  line-height: 2em;
  margin: -5px 0 5px 5px;
}

div.forum-post-links ul.links.inline li {
  line-height: 1%;
}

.af-button-large,
.af-button-small,
.author-pane-link {
  margin-left: .5em;
  margin-right: .5em;
}

div.feed-icon img {
  border-style: none;
}

.header-inner {
  margin: 0 auto;
  display: table;
  text-align: center;
}

.region-top,
.region-bottom {
  display: table;
  width: 100%;
}

.region-top > *,
.region-bottom > * {
  float: left;
}

@media screen and (max-width: 678px) {
  .region-top > *,
  .region-bottom > * {
    float: none;
    width: 100%;
  }

  div.region.region-top1 div.art-block,
  div.region.region-top2 div.art-block,
  div.region.region-top3 div.art-block {
    height: auto;
  }

  div.region.region-top1 div.art-blockcontent,
  div.region.region-top2 div.art-blockcontent {
    min-height: 0px;
  }
}

.adslist {
  display: table;
  margin: 0 auto;
}

.view-id-front_page_slideshow .views-slideshow-pager-fields img {
  max-width: 100%;
  max-height: 100%;
  margin: 0;
  width: 100%;
  height: auto;
  margin-bottom: 8.5px;
}

.view-id-front_page_slideshow .views-slideshow-pager-fields div {
  display: block;
}

.view-id-front_page_slideshow .views-slideshow-pager-fields .active img {
  border: 2px solid #9cc3d7;
}

.page-about-mhcc-rides-starting-locations .views-submit-button {
  display: inline-block;
}
.page-about-mhcc-rides-starting-locations .views-submit-button .form-submit {
  float: left !important;
}
.page-about-mhcc-rides-starting-locations .views-submit-button .ajax-progress {
  float: left;
}
.page-about-mhcc-rides-starting-locations .views-reset-button {
  float: right;
}

